update module error report

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 administrator/components/com_danhmuc/src/Table/DMChucvu.php
-administrator/cache/schemaorg
+administrator/cache
 uploader/files
 upload
